--- a/CV.tex
+++ b/CV.tex
@@ -68,17 +68,17 @@ I am broadly interested in datacenter networking and distributed systems, with p
 
 [C7] \textbf{Wenxue Li}, Xiangzhou Liu, Yunxuan Zhang, Zihao Wang, Wei Gu, Tao Qian, Gaoxiong Zeng, Shoushou Ren, Xinyang Huang, Zhenghang Ren, Bowen Liu, Junxue Zhang, Bingyang Liu, Kai Chen. \blue{Revisiting RDMA Reliability for Lossy Fabrics.} In the 39th annual conference of the ACM Special Interest Group on Data Communication (\textbf{SIGCOMM}), Coimbra, Portugal, September 8-11, 2025.
 
-[C6] Bowen Liu, Xinyang Huang, Qijing Li, Zhuobin Huang, Yijun Sun, \textbf{Wenxue Li}, Junxue Zhang, Ping Yin, Kai Chen. \blue{"CEIO: A Cache-Efficient Network I/O Architecture for NIC-CPU Data Paths."} In the 39th annual conference of the ACM Special Interest Group on Data Communication (\textbf{SIGCOMM}), Coimbra, Portugal, September 8-11, 2025.
+[C6] Bowen Liu, Xinyang Huang, Qijing Li, Zhuobin Huang, Yijun Sun, \textbf{Wenxue Li}, Junxue Zhang, Ping Yin, Kai Chen. \blue{CEIO: A Cache-Efficient Network I/O Architecture for NIC-CPU Data Paths.} In the 39th annual conference of the ACM Special Interest Group on Data Communication (\textbf{SIGCOMM}), Coimbra, Portugal, September 8-11, 2025.
 
-[C5] Jinbin Hu*, \textbf{Wenxue Li*}, Xiangzhou Liu,, Junfeng Wang, Bowen Liu, Ping Yin, Jianxin Wang, Jiawei Huang, Kai Chen. \blue{"FLB: Fine-grained Load Balancing for Lossless Datacenter Networks."} In the 2025 USENIX Annual Technical Conference (\textbf{ATC}), Boston, MA, USA, July 2025.
+[C5] Jinbin Hu*, \textbf{Wenxue Li*}, Xiangzhou Liu,, Junfeng Wang, Bowen Liu, Ping Yin, Jianxin Wang, Jiawei Huang, Kai Chen. \blue{FLB: Fine-grained Load Balancing for Lossless Datacenter Networks.} In the 2025 USENIX Annual Technical Conference (\textbf{ATC}), Boston, MA, USA, July 2025.
 
-[C4] Zhenghang Ren, Yuxuan Li, Zilong Wang, Xinyang Huang, \textbf{Wenxue Li}, Kaiqiang Xu, Xudong Liao, Yijun Sun, Bowen Liu, Han Tian, Junxue Zhang, Mingfei Wang, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen. \blue{"Enabling Efficient GPU Communication over Multiple NICs with FuseLink."} In the 19th USENIX Symposium on Operating Systems Design and Implementation (\textbf{OSDI}), Boston, MA, USA, July 2025.
+[C4] Zhenghang Ren, Yuxuan Li, Zilong Wang, Xinyang Huang, \textbf{Wenxue Li}, Kaiqiang Xu, Xudong Liao, Yijun Sun, Bowen Liu, Han Tian, Junxue Zhang, Mingfei Wang, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen. \blue{Enabling Efficient GPU Communication over Multiple NICs with FuseLink.} In the 19th USENIX Symposium on Operating Systems Design and Implementation (\textbf{OSDI}), Boston, MA, USA, July 2025.
 
-[C3] \textbf{Wenxue Li*}, Junyi Zhang*, Yufei Liu, Gaoxiong Zeng, Zilong Wang, Chaoliang Zeng, Pengpeng Zhou, Qiaoling Wang, Kai Chen. \blue{"Cepheus: Accelerating Datacenter Applications with High-Performance Roce-Capable Multicast."} In the 30th IEEE International Symposium on High-Performance Computer Architecture (\textbf{HPCA}), Edinburgh, Scotland, March 2024.
+[C3] \textbf{Wenxue Li*}, Junyi Zhang*, Yufei Liu, Gaoxiong Zeng, Zilong Wang, Chaoliang Zeng, Pengpeng Zhou, Qiaoling Wang, Kai Chen. \blue{Cepheus: Accelerating Datacenter Applications with High-Performance Roce-Capable Multicast.} In the 30th IEEE International Symposium on High-Performance Computer Architecture (\textbf{HPCA}), Edinburgh, Scotland, March 2024.
 
-[C2] \textbf{Wenxue Li}, Chaoliang Zeng, Jinbin Hu, Kai Chen. \blue{"Towards Fine-grained and Practical Flow Control for Datacenter Networks."} In the 31st IEEE International Conference on Network Protocols (\textbf{ICNP}), Reykjavik, Iceland, October 2023.
+[C2] \textbf{Wenxue Li}, Chaoliang Zeng, Jinbin Hu, Kai Chen. \blue{Towards Fine-grained and Practical Flow Control for Datacenter Networks.} In the 31st IEEE International Conference on Network Protocols (\textbf{ICNP}), Reykjavik, Iceland, October 2023.
 
-[C1] Zilong Wang, Layong Luo, Qingsong Ning, Chaoliang Zeng, \textbf{Wenxue Li}, Xinchen Wan, Peng Xie, Tao Feng, Ke Cheng, Xiongfei Geng, Weicheng Ling, Kejia Huo, Pingbo An, Kui Ji, Shideng Zhang, Bin Xu, Ruiqing Feng, Tao Ding, Kai Chen, Chuanxiong Guo. \blue{"SRNIC: A Scalable Architecture for RDMA NICs."} In the 20th USENIX Symposium on Networked Systems Design and Implementation (\textbf{NSDI}), Boston, MA, USA, April 2023.
+[C1] Zilong Wang, Layong Luo, Qingsong Ning, Chaoliang Zeng, \textbf{Wenxue Li}, Xinchen Wan, Peng Xie, Tao Feng, Ke Cheng, Xiongfei Geng, Weicheng Ling, Kejia Huo, Pingbo An, Kui Ji, Shideng Zhang, Bin Xu, Ruiqing Feng, Tao Ding, Kai Chen, Chuanxiong Guo. \blue{SRNIC: A Scalable Architecture for RDMA NICs.} In the 20th USENIX Symposium on Networked Systems Design and Implementation (\textbf{NSDI}), Boston, MA, USA, April 2023.
 
 \textbf{Journal Publications}
 
